examples/test/testpolicy10451.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10451
  namespace: namespace94
spec:
  podSelector:
    matchLabels:
      key34: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value6
          key46: value12
          key14: value17
      podSelector:
        matchLabels:
          key6: value34
          key20: value12
          key45: value19
